[package]
name = "multi-party-ecdsa"
version = "0.4.6"
edition = "2018"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
#default = ["num-bigint"]
cclst = ["class_group"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.3.0"
libsecp256k1 = "0.3.2"
curv = {path="../curv" ,version="0.7.0",default-features = false }
centipede = {path="../centipede" ,version="*" ,default-features = false }
paillier = {path="../rust-paillier" ,version="*" ,default-features = false }
zk-paillier = {path="../zk-paillier" ,version="*" ,default-features = false }

[dependencies.class_group]
git = "https://github.com/KZen-networks/class"
tag = "v0.5.2"
optional = true

[dependencies.rust-crypto]
version = "^0.2"
optional = true

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = "0.4.2"
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.7"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[[example]]
name = "sm_manager"

[[example]]
name = "gg18_sign_client"

[[example]]
name = "gg18_keygen_client"

[[example]]
name = "common"
crate-type = ["lib"]

[[bench]]
name = "cclst_keygen"
path = "benches/two_party_ecdsa/cclst_2019/keygen.rs"
required-features = ["cclst"]
harness = false

[[bench]]
name = "cclst_sign"
path = "benches/two_party_ecdsa/cclst_2019/sign.rs"
required-features = ["cclst"]
harness = false


[[bench]]
name = "gg18"
path = "benches/multi_party_ecdsa/gg18/keygen.rs"
harness = false

[[bench]]
name = "lindel2017_keygen"
path = "benches/two_party_ecdsa/lindell_2017/keygen.rs"
harness = false


[[bench]]
name = "lindel2017_sign"
path = "benches/two_party_ecdsa/lindell_2017/sign.rs"
harness = false
